# pathManager

./: .gitignore  .pdm-python  README.md  db.py  main.py  pyproject.toml  utils.py
static/: db.sql
